--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -31,7 +31,7 @@
             ],
             "styles": [
               "src/theme.less",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -95,7 +95,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss",
+              "src/theme.less"
             ],
             "scripts": []
           }
