Feat: Implementação das edições em produtos e aliquotas + inserção de dados possível
Alteração nos componentes de formulário permitindo a edição dos registros, adição de uma linha de texto no application.properties que caso descomentada insira os dados sql ao rodar o ambiente, além de um método em aliquota service que permite gerar todas as relações entre estados com uma porcentagem de aliquota como 0

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.sql.init.encoding=UTF-8
 
+# A linha abaixo faz com que a cada inicialização do banco de dados ele rode os inserts definidos no arquivo
+# spring.sql.init.data-locations=classpath:inserts.sql
+
 spring.main.allow-circular-references=true
 
 
