:sparkles: feat: adicionando o diagrama classes atual Link: https://lucid.app/lucidchart/bc216317-cbb9-4a63-9dc2-2a84d53c0e56/edit?invitationId=inv_fbcd61ec-b79e-49ee-a726-8c676c165af6&page=0_0#

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.sql.init.continue-on-error=true
 spring.sql.init.encoding=UTF-8
 
 # A linha abaixo faz com que a cada inicialização do banco de dados ele rode os inserts definidos no arquivo
-# spring.sql.init.data-locations=classpath:inserts.sql
+spring.sql.init.data-locations=classpath:inserts.sql
 
 spring.main.allow-circular-references=true
 
