--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,16 +1,8 @@
 spring.application.name=review
 spring.profiles.active=@spring.profiles.active@
-
+spring.output.ansi.enabled=always
 server.port=9000
 
-# Fonte de dados:
-spring.datasource.url=jdbc:mysql://localhost:3306/review?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-
-# JPA/Hibernate/ORM:
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 
 # Inicialização do banco de dados com scripts SQL:
 spring.jpa.defer-datasource-initialization=true
