--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -132,6 +132,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>back-end</finalName>
 	</build>
 
 </project>
