--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=review
 spring.profiles.active=@spring.profiles.active@
-spring.output.ansi.enabled=always
 server.port=9000
+spring.output.ansi.enabled=always
 
+# JPA/Hibernate/ORM:
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Inicialização do banco de dados com scripts SQL:
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.sql.init.encoding=UTF-8
+spring.sql.init.platform=mysql
 
 # A linha abaixo faz com que a cada inicialização do banco de dados ele rode os inserts definidos no arquivo
 # spring.sql.init.data-locations=classpath:inserts.sql
