--- a/back-end/src/main/resources/application-dev.properties
+++ b/back-end/src/main/resources/application-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.password=root
 
 # JPA/Hibernate/ORM:
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
