--- a/back-end/src/main/resources/application-prod.properties
+++ b/back-end/src/main/resources/application-prod.properties
@@ -3,5 +3,10 @@ spring.datasource.url=${DATASOURCE_URL}?createDatabaseIfNotExist=true&ssl-mode=R
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 
+# Spring Boot DevTools
+spring.devtools.restart.enabled=false
+spring.devtools.livereload.enabled=false
+
 # JPA/Hibernate/ORM:
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+
