--- a/back-end/src/main/resources/application-prod.properties
+++ b/back-end/src/main/resources/application-prod.properties
@@ -8,5 +8,5 @@ spring.devtools.restart.enabled=false
 spring.devtools.livereload.enabled=false
 
 # JPA/Hibernate/ORM:
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
