--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.sql.init.encoding=UTF-8
 spring.sql.init.platform=mysql
 
 # A linha abaixo faz com que a cada inicialização do banco de dados ele rode os inserts definidos no arquivo
-# spring.sql.init.data-locations=classpath:inserts.sql
+spring.sql.init.data-locations=classpath:inserts.sql
 
 spring.main.allow-circular-references=true
 
