--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -68,7 +68,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -105,12 +111,8 @@
               "src/assets"
             ],
             "styles": [
-<<<<<<< HEAD
               "src/styles.scss",
               "src/theme.less"
-=======
-              "src/styles.scss"
->>>>>>> 2c3d6868e3d54639d175160bd83790f837929790
             ],
             "scripts": []
           }
