build: String Boot Devtools não monitora a pasta relatorios

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.main.allow-circular-references=true
 
 # JWT
 jwt.secret=review
+
+# spring boot DevTools não monitora essa pasta
+spring.devtools.restart.exclude=relatorios/**, reportsFile/**
