feat: paginação parcial back-end

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -25,3 +25,7 @@ jwt.secret=review
 
 # spring boot DevTools não monitora essa pasta
 spring.devtools.restart.exclude=relatorios/**, reportsFile/**
+
+# Paginação
+spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.max-page-size=100
